--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^3.9.0",
     "next": "^8.0.3",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "socket.io": "^2.2.0"
   }
 }
