--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@zeit/next-less": "^1.0.1",
     "animated": "^0.2.2",
+    "classnames": "^2.2.6",
     "less": "^3.9.0",
     "next": "^8.0.3",
     "puppeteer": "^1.12.2",
