--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "start": "next start",
     "export": "next build && next export",
     "sync:s3": "AWS_DEFAULT_PROFILE=cezar aws s3 sync out s3://dwc-client-prototype",
-    "deploy": "npm run export && npm run sync:s3"
+    "deploy": "npm run export && npm run sync:s3",
+    "dev:server": "nodemon --exec babel-node server/index.js",
+    "start:server": "NODE_ENV=production babel-node server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
     "@zeit/next-less": "^1.0.1",
     "animated": "^0.2.2",
+    "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
+    "express": "^4.16.4",
     "less": "^3.9.0",
     "next": "^8.0.3",
     "puppeteer": "^1.12.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0"
   }
 }
