--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
-    "sync:s3": "AWS_DEFAULT_PROFILE=cezar aws s3 sync out s3://dwc-client-prototype",
-    "deploy": "npm run export && npm run sync:s3",
     "dev:server": "nodemon --exec babel-node server/index.js",
-    "start:server": "next build && NODE_ENV=production babel-node server/index.js"
+    "start:server": "next build && NODE_ENV=production babel-node server/index.js",
+    "p:centralizedPlay": "babel-node scripts/performance/centralizedPlay.js",
+    "p:toCentralized": "babel-node scripts/performance/toCentralized.js",
+    "p:toDecentralized": "babel-node scripts/performance/toDecentralized.js",
+    "p:toDistributed": "babel-node scripts/performance/toDistributed.js"
   },
   "keywords": [],
   "author": "",
