--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "express": "^4.16.4",
+    "howler": "^2.1.1",
     "jszip": "^3.2.1",
     "jszip-utils": "^0.0.2",
     "less": "^3.9.0",
