--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "p:toDistributed": "babel-node scripts/performance/toDistributed.js",
     "p:decentralizedCreaturesToGardens": "babel-node scripts/performance/decentralizedCreaturesToGardens.js",
     "p:decentralizedExitCreatures": "babel-node scripts/performance/decentralizedExitCreatures.js",
-    "p:sendCreatureToGarden": "babel-node scripts/performance/sendCreatureToGarden.js"
+    "p:sendCreatureToGarden": "babel-node scripts/performance/sendCreatureToGarden.js",
+    "p:exitAllCreatures": "babel-node scripts/performance/exitAllCreatures.js"
   },
   "keywords": [],
   "author": "",
