--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "proton-js": "^3.1.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "request": "^2.88.2",
     "socket.io": "^2.2.0"
   }
 }
